fix arch test